--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Hello from my website</h1>
 <img src="images/img.png">
-<h2>This is Canadian Goose</h2>
+<h2>This is Canadian Goose!</h2>
 </body>
 </html>
